tests/cases/errors/runtime_too_few_arguments.lox
// Passing fewer arguments than the function's arity is a runtime error.
// expect runtime error: Expected 2 arguments but got 1
fun add(a, b) { return a + b; }
add(1);
